--- a/Day1/index.html
+++ b/Day1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video game information</title>
+    <title>Video game releases</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script/script.js"></script>
@@ -11,21 +11,38 @@
     <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body class="bg-dark" onload="getAllGames()">
+<body class="bg-dark" onload="main()">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand"><img src="img/logo.png" width="160" height="80" alt="Logo"></a>
+        <span class="navbar-text">Controller - Release dates and more</span>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+        </ul>
+
+    </nav>
 
     <main>
         <div class="row">
             <div class="col-sm whiteText">
                 <h2>Search for a game title to see its release date and rating: </h2>
-            </div>
-            <div class="col-sm">
-                    <label for="text"></label> <br>
+                <label for="text">Search for game title</label> <br>
                     <input id="gamesearch" type="text" placeholder="Title name"> <br>
                     <button class="bSearch btn btn-light" onclick="getGameByName()">Search for game</button> <br>
                     <button class="bReset btn btn-light" onclick="reset()">Reset</button>
                     <div id="result"></div>
             </div>
-            <div class="col-sm"></div>
+            <div class="col-sm whiteText">
+                    <h2>Recent releases (within last 30 days): </h2>
+                    <div id="newReleasesLast"></div>
+                    <button onclick="getNewReleasesLastMonth()" class="btn btn-light">Load more</button>
+            </div>
+            <div class="col-sm whiteText">
+                <h2>Future releases (in next 30 days): </h2>
+                <div id="newReleasesNext"></div>
+                <button onclick="getNewReleasesNextMonth()" class="btn btn-light">Load more</button>
+            </div>
         </div>
     </main>
 
